# tap-exchangeratehost

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
tap_exchangeratehost/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
